Add multiversion build and release foundation